// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RestoreCloudBackupPasswordScreen > renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-view-175oi2r"
  >
    <div
      class="css-view-175oi2r"
      style="padding-bottom: 0px; padding-left: 0px; padding-right: 0px;"
    >
      <div
        class="css-view-175oi2r r-flex-13awgt0 r-justifyContent-17s6mgv"
      >
        ExpoLinearGradient
        <div
          class="css-view-175oi2r r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-agouwx"
        >
          <div
            class="css-view-175oi2r"
            style="flex-grow: 1;"
          >
            <div
              class="css-view-175oi2r r-flexGrow-16y2uox r-paddingBottom-kzbkwu"
              style="padding-right: 16px; padding-left: 16px; min-height: 0px;"
            >
              <div
                class="css-view-175oi2r"
                style="gap: 16px; padding-top: 48px;"
              >
                <div
                  class="css-view-175oi2r"
                  style="gap: 8px; margin: 12px 12px 12px 12px;"
                >
                  <div
                    class="css-view-175oi2r"
                    style="margin-bottom: 4px;"
                  >
                    <div
                      class="css-view-175oi2r"
                      style="padding: 12px 12px 12px 12px; border-top-left-radius: 8px; border-top-right-radius: 8px; border-bottom-right-radius: 8px; border-bottom-left-radius: 8px;"
                    >
                      <div
                        fill="none"
                        stroke-width="8"
                        style="color: rgb(19, 19, 19); width: 18px; height: 18px;"
                        viewbox="0 0 16 16"
                      >
                        <div
                          d="M9.26896 5.06732L9.26891 5.06728C8.50684 4.3958 7.50577 3.9872 6.4091 3.9872C4.01716 3.9872 2.07829 5.92607 2.07829 8.318C2.07829 10.7099 4.01716 12.6488 6.4091 12.6488H10.5455C12.4092 12.6488 13.9217 11.1363 13.9217 9.27255C13.9217 7.4088 12.4092 5.89629 10.5455 5.89629C10.3683 5.89629 10.1951 5.90917 10.023 5.9349C9.81109 5.61321 9.55717 5.32144 9.26896 5.06732Z"
                          fill="currentColor"
                          stroke="currentColor"
                          stroke-width="0.388889"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-text-146c3p1"
                    dir="auto"
                    style="padding-top: 0px; font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
                  >
                    account.cloud.password.title
                  </div>
                  <div
                    class="css-text-146c3p1"
                    dir="auto"
                    style="font-size: 15px; line-height: 18px; font-family: Basel Grotesk; font-weight: 400;"
                  >
                    account.cloud.password.subtitle
                  </div>
                </div>
                <div
                  class="css-view-175oi2r"
                >
                  <div
                    class="css-view-175oi2r"
                  >
                    <div
                      class="css-view-175oi2r"
                      style="padding: 4px 4px 4px 4px; border-top-left-radius: 16px; border-top-right-radius: 16px; border-bottom-right-radius: 16px; border-bottom-left-radius: 16px; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px;"
                    >
                      <div
                        class="css-view-175oi2r"
                        style="min-height: 48px;"
                      >
                        <input
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="css-textinput-11aywtz r-placeholderTextColor-6taxm2"
                          dir="auto"
                          enterkeyhint="done"
                          placeholder="account.cloud.password.input"
                          rows="1"
                          spellcheck="false"
                          style="--placeholderTextColor: rgba(19, 19, 19, 0.35); border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; background-color: rgba(0, 0, 0, 0); color: rgb(19, 19, 19); border-top-color: rgba(0,0,0,0.00); border-right-color: rgba(0,0,0,0.00); border-bottom-color: rgba(0,0,0,0.00); border-left-color: rgba(0,0,0,0.00); border-top-width: 0px; border-right-width: 0px; border-bottom-width: 0px; border-left-width: 0px; height: auto; min-width: 0px; border-top-left-radius: 12px; border-top-right-radius: 12px; border-bottom-right-radius: 12px; border-bottom-left-radius: 12px; font-family: Basel Grotesk; font-size: 17px; font-weight: 400; flex: 1; padding: 12px 16px 12px 16px;"
                          type="password"
                          value=""
                          virtualkeyboardpolicy="auto"
                        />
                        <div
                          class="css-view-175oi2r"
                          style="margin-right: 12px; margin-left: 12px;"
                        >
                          <button
                            android_ripple="[object Object]"
                            role="button"
                            style="background-color: transparent; padding: 4px;"
                          >
                            <div
                              fill="none"
                              stroke-width="8"
                              style="width: 20px; height: 20px; color: rgba(19, 19, 19, 0.63);"
                              viewbox="0 0 24 24"
                            >
                              <div
                                d="M20.5901 10.52C21.1401 11.43 21.1401 12.57 20.5901 13.48C19.3601 15.53 16.61 19 12 19C11.252 19 10.5481 18.905 9.89407 18.74C9.67107 18.684 9.60094 18.3981 9.76394 18.2361L11.6599 16.3401C11.7759 16.2241 11.92 16.25 12 16.25C14.344 16.25 16.25 14.343 16.25 12C16.25 11.92 16.2381 11.762 16.3211 11.679L19.063 8.93704C19.19 8.81004 19.4039 8.82313 19.5149 8.96413C19.9549 9.52013 20.3131 10.053 20.5901 10.52ZM21.5301 3.53005L3.53005 21.5301C3.38405 21.6761 3.19202 21.75 3.00002 21.75C2.80802 21.75 2.61599 21.6771 2.46999 21.5301C2.17699 21.2371 2.17699 20.762 2.46999 20.469L6.17507 16.7639C4.90507 15.6829 3.98394 14.436 3.40994 13.479C2.85994 12.569 2.85994 11.4291 3.40994 10.5191C4.63994 8.46907 7.39002 4.99905 12 4.99905C13.824 4.99905 15.3471 5.54595 16.6131 6.32595L20.47 2.46902C20.763 2.17602 21.238 2.17602 21.531 2.46902C21.824 2.76202 21.8231 3.23705 21.5301 3.53005ZM8.52004 14.419L9.60891 13.3301C9.38691 12.9351 9.25002 12.486 9.25002 12C9.25002 11.65 9.31996 11.32 9.43996 11.01C9.62996 11.17 9.86992 11.27 10.1399 11.27C10.7599 11.27 11.27 10.7599 11.27 10.1399C11.27 9.86992 11.17 9.62996 11.01 9.43996C11.32 9.31996 11.65 9.25002 12 9.25002C12.486 9.25002 12.9361 9.38691 13.3301 9.60891L14.419 8.52004C13.731 8.03804 12.899 7.75002 12 7.75002C9.66002 7.75002 7.75002 9.66002 7.75002 12C7.75002 12.9 8.03804 13.731 8.52004 14.419Z"
                                fill="currentColor"
                              />
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-view-175oi2r"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-view-175oi2r"
        >
          <div
            class="css-view-175oi2r"
          >
            <button
              accessibilitystate="[object Object]"
              class="relative box-border flex min-h-0 min-w-0 items-center justify-center border border-solid border-transparent gap-3 rounded-20 px-5 py-4 flex-row flex-1 basis-0 self-stretch bg-surface2 cursor-default mx-[16px] my-[12px]"
              data-testid="continue"
              dd-action-name="common.button.continue"
              disabled=""
              role="button"
              style="transform: [object Object];"
            >
              <div
                class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a"
                dir="auto"
                style="font-family: Basel Grotesk; font-weight: 500;"
              >
                common.button.continue
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-view-175oi2r"
      style="padding-right: 16px; padding-left: 16px; top: 0px; right: 0px; left: 0px; z-index: 1020; pointer-events: box-none;"
    >
      <button
        android_ripple="[object Object]"
        data-testid="onboarding-header-back"
        hitslop="24"
        role="button"
        style="background-color: transparent;"
      >
        <div
          class="css-view-175oi2r"
          style="border-top-left-radius: 999999px; border-top-right-radius: 999999px; border-bottom-right-radius: 999999px; border-bottom-left-radius: 999999px; transform: rotate(0deg);"
        >
          <div
            fill="none"
            stroke-width="8"
            style="width: 28px; height: 28px; color: rgba(19, 19, 19, 0.63);"
            viewbox="0 0 24 24"
          >
            <div
              clip-rule="evenodd"
              d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.2929 12.7071C7.9024 12.3166 7.9024 11.6834 8.2929 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RestoreCloudBackupPasswordScreen > renders the enter-recovery-phrase link when restoring a mnemonic 1`] = `
<DocumentFragment>
  <div
    class="css-view-175oi2r"
  >
    <div
      class="css-view-175oi2r"
      style="padding-bottom: 0px; padding-left: 0px; padding-right: 0px;"
    >
      <div
        class="css-view-175oi2r r-flex-13awgt0 r-justifyContent-17s6mgv"
      >
        ExpoLinearGradient
        <div
          class="css-view-175oi2r r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-agouwx"
        >
          <div
            class="css-view-175oi2r"
            style="flex-grow: 1;"
          >
            <div
              class="css-view-175oi2r r-flexGrow-16y2uox r-paddingBottom-kzbkwu"
              style="padding-right: 16px; padding-left: 16px; min-height: 0px;"
            >
              <div
                class="css-view-175oi2r"
                style="gap: 16px; padding-top: 48px;"
              >
                <div
                  class="css-view-175oi2r"
                  style="gap: 8px; margin: 12px 12px 12px 12px;"
                >
                  <div
                    class="css-view-175oi2r"
                    style="margin-bottom: 4px;"
                  >
                    <div
                      class="css-view-175oi2r"
                      style="padding: 12px 12px 12px 12px; border-top-left-radius: 8px; border-top-right-radius: 8px; border-bottom-right-radius: 8px; border-bottom-left-radius: 8px;"
                    >
                      <div
                        fill="none"
                        stroke-width="8"
                        style="color: rgb(19, 19, 19); width: 18px; height: 18px;"
                        viewbox="0 0 16 16"
                      >
                        <div
                          d="M9.26896 5.06732L9.26891 5.06728C8.50684 4.3958 7.50577 3.9872 6.4091 3.9872C4.01716 3.9872 2.07829 5.92607 2.07829 8.318C2.07829 10.7099 4.01716 12.6488 6.4091 12.6488H10.5455C12.4092 12.6488 13.9217 11.1363 13.9217 9.27255C13.9217 7.4088 12.4092 5.89629 10.5455 5.89629C10.3683 5.89629 10.1951 5.90917 10.023 5.9349C9.81109 5.61321 9.55717 5.32144 9.26896 5.06732Z"
                          fill="currentColor"
                          stroke="currentColor"
                          stroke-width="0.388889"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-text-146c3p1"
                    dir="auto"
                    style="padding-top: 0px; font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
                  >
                    account.cloud.password.title
                  </div>
                  <div
                    class="css-text-146c3p1"
                    dir="auto"
                    style="font-size: 15px; line-height: 18px; font-family: Basel Grotesk; font-weight: 400;"
                  >
                    account.cloud.password.subtitle
                  </div>
                </div>
                <div
                  class="css-view-175oi2r"
                >
                  <div
                    class="css-view-175oi2r"
                  >
                    <div
                      class="css-view-175oi2r"
                      style="padding: 4px 4px 4px 4px; border-top-left-radius: 16px; border-top-right-radius: 16px; border-bottom-right-radius: 16px; border-bottom-left-radius: 16px; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px;"
                    >
                      <div
                        class="css-view-175oi2r"
                        style="min-height: 48px;"
                      >
                        <input
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="css-textinput-11aywtz r-placeholderTextColor-6taxm2"
                          dir="auto"
                          enterkeyhint="done"
                          placeholder="account.cloud.password.input"
                          rows="1"
                          spellcheck="false"
                          style="--placeholderTextColor: rgba(19, 19, 19, 0.35); border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; background-color: rgba(0, 0, 0, 0); color: rgb(19, 19, 19); border-top-color: rgba(0,0,0,0.00); border-right-color: rgba(0,0,0,0.00); border-bottom-color: rgba(0,0,0,0.00); border-left-color: rgba(0,0,0,0.00); border-top-width: 0px; border-right-width: 0px; border-bottom-width: 0px; border-left-width: 0px; height: auto; min-width: 0px; border-top-left-radius: 12px; border-top-right-radius: 12px; border-bottom-right-radius: 12px; border-bottom-left-radius: 12px; font-family: Basel Grotesk; font-size: 17px; font-weight: 400; flex: 1; padding: 12px 16px 12px 16px;"
                          type="password"
                          value=""
                          virtualkeyboardpolicy="auto"
                        />
                        <div
                          class="css-view-175oi2r"
                          style="margin-right: 12px; margin-left: 12px;"
                        >
                          <button
                            android_ripple="[object Object]"
                            role="button"
                            style="background-color: transparent; padding: 4px;"
                          >
                            <div
                              fill="none"
                              stroke-width="8"
                              style="width: 20px; height: 20px; color: rgba(19, 19, 19, 0.63);"
                              viewbox="0 0 24 24"
                            >
                              <div
                                d="M20.5901 10.52C21.1401 11.43 21.1401 12.57 20.5901 13.48C19.3601 15.53 16.61 19 12 19C11.252 19 10.5481 18.905 9.89407 18.74C9.67107 18.684 9.60094 18.3981 9.76394 18.2361L11.6599 16.3401C11.7759 16.2241 11.92 16.25 12 16.25C14.344 16.25 16.25 14.343 16.25 12C16.25 11.92 16.2381 11.762 16.3211 11.679L19.063 8.93704C19.19 8.81004 19.4039 8.82313 19.5149 8.96413C19.9549 9.52013 20.3131 10.053 20.5901 10.52ZM21.5301 3.53005L3.53005 21.5301C3.38405 21.6761 3.19202 21.75 3.00002 21.75C2.80802 21.75 2.61599 21.6771 2.46999 21.5301C2.17699 21.2371 2.17699 20.762 2.46999 20.469L6.17507 16.7639C4.90507 15.6829 3.98394 14.436 3.40994 13.479C2.85994 12.569 2.85994 11.4291 3.40994 10.5191C4.63994 8.46907 7.39002 4.99905 12 4.99905C13.824 4.99905 15.3471 5.54595 16.6131 6.32595L20.47 2.46902C20.763 2.17602 21.238 2.17602 21.531 2.46902C21.824 2.76202 21.8231 3.23705 21.5301 3.53005ZM8.52004 14.419L9.60891 13.3301C9.38691 12.9351 9.25002 12.486 9.25002 12C9.25002 11.65 9.31996 11.32 9.43996 11.01C9.62996 11.17 9.86992 11.27 10.1399 11.27C10.7599 11.27 11.27 10.7599 11.27 10.1399C11.27 9.86992 11.17 9.62996 11.01 9.43996C11.32 9.31996 11.65 9.25002 12 9.25002C12.486 9.25002 12.9361 9.38691 13.3301 9.60891L14.419 8.52004C13.731 8.03804 12.899 7.75002 12 7.75002C9.66002 7.75002 7.75002 9.66002 7.75002 12C7.75002 12.9 8.03804 13.731 8.52004 14.419Z"
                                fill="currentColor"
                              />
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="css-view-175oi2r"
                  >
                    <button
                      android_ripple="[object Object]"
                      role="button"
                      style="background-color: transparent;"
                    >
                      <div
                        class="css-text-146c3p1"
                        dir="auto"
                        style="margin-bottom: 12px; font-size: 17px; line-height: 19.549999999999997px; font-family: Basel Grotesk; font-weight: 500;"
                      >
                        account.cloud.password.recoveryPhrase
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-view-175oi2r"
        >
          <div
            class="css-view-175oi2r"
          >
            <button
              accessibilitystate="[object Object]"
              class="relative box-border flex min-h-0 min-w-0 items-center justify-center border border-solid border-transparent gap-3 rounded-20 px-5 py-4 flex-row flex-1 basis-0 self-stretch bg-surface2 cursor-default mx-[16px] my-[12px]"
              data-testid="continue"
              dd-action-name="common.button.continue"
              disabled=""
              role="button"
              style="transform: [object Object];"
            >
              <div
                class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a"
                dir="auto"
                style="font-family: Basel Grotesk; font-weight: 500;"
              >
                common.button.continue
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-view-175oi2r"
      style="padding-right: 16px; padding-left: 16px; top: 0px; right: 0px; left: 0px; z-index: 1020; pointer-events: box-none;"
    >
      <button
        android_ripple="[object Object]"
        data-testid="onboarding-header-back"
        hitslop="24"
        role="button"
        style="background-color: transparent;"
      >
        <div
          class="css-view-175oi2r"
          style="border-top-left-radius: 999999px; border-top-right-radius: 999999px; border-bottom-right-radius: 999999px; border-bottom-left-radius: 999999px; transform: rotate(0deg);"
        >
          <div
            fill="none"
            stroke-width="8"
            style="width: 28px; height: 28px; color: rgba(19, 19, 19, 0.63);"
            viewbox="0 0 24 24"
          >
            <div
              clip-rule="evenodd"
              d="M15.7071 5.29289C16.0976 5.68342 16.0976 6.31658 15.7071 6.70711L10.4142 12L15.7071 17.2929C16.0976 17.6834 16.0976 18.3166 15.7071 18.7071C15.3166 19.0976 14.6834 19.0976 14.2929 18.7071L8.2929 12.7071C7.9024 12.3166 7.9024 11.6834 8.2929 11.2929L14.2929 5.29289C14.6834 4.90237 15.3166 4.90237 15.7071 5.29289Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
